[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geotracks"
version = "0.0.1"
authors = [
  { name="Anna Tippett", email="a.tippett22@imperial.ac.uk" },
]
description = "Library for sorting tracks into 2D space"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
